--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.0.0)
 enable_language(Fortran)
 
 if(${CMAKE_Fortran_COMPILER} MATCHES "ifort.*")
-    set(CMAKE_Fortran_FLAGS_RELEASE "${CMAKE_Fortran_FLAGS} -fltconsistency")
+    set(CMAKE_Fortran_FLAGS_RELEASE "${CMAKE_Fortran_FLAGS} -fltconsistency -O3")
     set(CMAKE_Fortran_FLAGS_DEBUG   "${CMAKE_Fortran_FLAGS} -fltconsistency")
 endif()
 
@@ -24,7 +24,9 @@ set(fitpack_SRC
     fitpack/fprati.f
     fitpack/fprota.f
     fitpack/fpsurf.f
+    fitpack/parcur.f
     fitpack/parder.f
+    fitpack/fppara.f
     fitpack/splder.f
     fitpack/splev.f
     fitpack/surfit.f
@@ -36,21 +38,21 @@ add_library(fitpack STATIC
 
 enable_language(CXX)
 
+set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+
+set(GCC_COMPILE_FLAGS "-fpic -ffast-math")
+
+add_definitions(${GCC_COMPILE_FLAGS})
+
 # C++ interface
 include(FortranCInterface)
 FortranCInterface_HEADER(FCMangle.h
                          MACRO_NAMESPACE "FC_"
                          SYMBOL_NAMESPACE ""
-                         SYMBOLS curfit splev splder surfit bispev parder)
+                         SYMBOLS parcur curfit splev splder surfit bispev parder)
 FortranCInterface_VERIFY(CXX)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
-set(fitpackpp_SRC
-	fitpackpp/BSplineCurve.cpp
-    fitpackpp/BSplineSurface.cpp)
-
-add_library(fitpackpp STATIC
-	        ${fitpackpp_SRC})
-
-target_link_libraries(fitpackpp fitpack)
+# install
+install(TARGETS fitpack DESTINATION lib)
+install(FILES "${PROJECT_BINARY_DIR}/FCMangle.h" DESTINATION include/fitpack)
